# network

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_all.sh  build_asan.sh  build_debug.sh  build_release.sh  build_tsan.sh  clangeg.cmake  project.manifest  readme.md  scratch.hpp  test.interface.hpp
common/: CMakeLists.txt  angle.hpp  assert_verify.hpp  astar.hpp  backtrace.cpp  backtrace.hpp  clang_tsan_memcpy.c  clang_tsan_memcpy.h  clang_warnings_begin.hpp  clang_warnings_end.hpp  compose.hpp  disable_special_members.hpp  escape.cpp  escape.hpp  file.cpp  file.hpp  git.cpp  git.hpp  grammar.hpp  hash.cpp  hash.hpp  inplace_allocator.h  log.hpp  math.hpp  opencl_utils.hpp  opengl_utils.hpp  optimisation.hpp  preprocessor.hpp  process.cpp  process.hpp  process.ipp  processID.cpp  processID.hpp  requireSemicolon.hpp  rounding.hpp  scheduler.cpp  scheduler.hpp  serialisation.hpp  serialisation_variant.hpp  stash.cpp  (+14 more)
common/test/: CMakeLists.txt  angle_tests.cpp  astar_tests.cpp  escape_tests.cpp  file_tests.cpp  grammar_tests.cpp  inplace_allocator_tests.cpp  main_test_runner.cpp  math_tests.cpp  preprocessor_tests.cpp  process_tests.cpp  rounding_tests.cpp  scheduler_tests.cpp  stash_tests.cpp  tuple_tests.cpp
controller/: CMakeLists.txt  controller.cpp  controller.hpp  device.hpp  event.hpp  input.cpp  locator.cpp  locator.hpp  main.cpp  neovim.hpp  test_evdev.cpp  virtual_device.hpp
controller/interface/: controller.interface.hpp  neovim.interface.hpp
controller/test/: CMakeLists.txt  basic_tests.cpp
cube/src/: CMakeLists.txt  application.cpp  debug.cpp  debug.hpp  demo.cpp  main.cpp  window.cpp
database/: CMakeLists.txt  database.cmake
database/compiler/: CMakeLists.txt  generator.cpp  grammar.cpp  grammar.hpp  json_converter.cpp  main.cpp  model.cpp  model.hpp  native_types.hpp
database/compiler/lib/api/: archive.hpp  component_info.hpp  component_type.hpp  data_pointer.hpp  data_variant.hpp  directories.hpp  exception.hpp  file.hpp  file_header.hpp  file_store.hpp  file_system.hpp  generics.hpp  loader.hpp  manifest_data.hpp  object.hpp  object_info.hpp  object_loader.hpp  serialisation.hpp  sources.hpp  storer.hpp
database/compiler/lib/src/: archive.cpp  file.cpp  loader.cpp  object.cpp  storer.cpp
database/compiler/templates/: data.cxx.jinja  data.hxx.jinja  environment.cxx.jinja  environment.hxx.jinja  file_info.cxx.jinja  file_info.hxx.jinja  manifest.cxx.jinja  manifest.hxx.jinja  view.cxx.jinja  view.hxx.jinja
database/tests/: CMakeLists.txt  edsUnitTestWrapper.hpp  environment_test.hpp
database/tests/advanced/: CMakeLists.txt  advanced_tests.cpp
database/tests/basic/: CMakeLists.txt  basic_tests.cpp  include.hpp  main.cpp
database/tests/multi_stage_base/: CMakeLists.txt  main.cpp  multi_stage_base_tests.cpp  schema.dbs
meta/: CMakeLists.txt  configuration.hpp  environment.hpp  interface_report.html  main.cpp  schema.dbs  task.hpp  test.interface.hpp
meta/driver/: CMakeLists.txt  main.cpp
meta/pipeline/: CMakeLists.txt  meta.cpp  stash_environment.cpp  stash_environment.hpp  task_interface_analysis.cpp  task_interface_analysis_report.cpp  task_service_gen.cpp  task_test.cpp
meta/pipeline/templates/: cmd.hxx.jinja  decoder.hxx.jinja  module.cxx.jinja  proxy_ipc.hxx.jinja  proxy_itc.hxx.jinja  receiver.hxx.jinja  registry.hxx.jinja
pipeline/: CMakeLists.txt  build_hash_code.hpp  pipeline.cpp  pipeline.hpp  stash.hpp
pipeline/test/: CMakeLists.txt
python/: CMakeLists.txt  module.cpp
report/: CMakeLists.txt  colours.cxx  colours.hxx  renderer_html.hpp
report/test/: CMakeLists.txt  basic.html  report_tests.cpp
scratch/accidental_copy/: main.cpp
service/: CMakeLists.txt  acceptor.hpp  access.hpp  asio.cpp  asio.hpp  base_interfaces.hpp  client.hpp  connect.hpp  connection.hpp  connectivity.hpp  daemon.cpp  daemon.hpp  enrole.hpp  fibers.hpp  ip_address.hpp  logical_thread.cpp  logical_thread.hpp  main.cpp  mega.cpp  message.hpp  network.hpp  port_number.hpp  proto.cpp  proxy.hpp  ptr.hpp  ptr.ipp  receiver.hpp  registration.hpp  registry.hpp  round_robin.hpp  router.hpp  rtti.hpp  sender.hpp  sender_socket.hpp  server.hpp  socket_info.hpp  yield.hpp
service/detail/: yield.hpp
service/interface/: connectivity.interface.hpp  controller.interface.hpp  python.interface.hpp  test.interface.hpp
service/protocol/: CMakeLists.txt  buffer.hpp  header.hpp  message.hpp  message_factory.hpp  packet.hpp  serialization.hpp  stack.hpp  wire.hpp
service/protocol/compiler/: CMakeLists.txt  generator.hpp
test/: CMakeLists.txt  basic_tests.cpp  component.cpp  daemon_tests.cpp  test.interface.hpp  test.py  test_factory.hpp  test_object.cpp  test_object.hpp
vocab/: CMakeLists.txt  common_strings.hpp  native_types.h  native_types.hpp  native_types_io.cpp  native_types_io.hpp  value.hpp  value.hxx
vocab/clang/: mega_pointer.hpp  result_type.hpp  symbol_path.hpp
vocab/compilation/: anon_symbols.cpp  anon_symbols.hpp  explicit_operation_id.cpp  explicit_operation_id.hpp  hyper_graph.cpp  hyper_graph.hpp  icontext_flags.cpp  invocation_id.hpp  megastructure_installation.cpp  megastructure_installation.hpp  modes.cpp  operator_id.cpp  operator_id.hpp  ownership.cpp  reserved_symbols.hpp  reserved_symbols.ipp  size_alignment.hpp  source_location.hpp  symbol_table.hpp  symbol_table.ipp  tool_chain_hash.cpp  tool_chain_hash.hpp  type_id_sequence.hpp
vocab/controller/: keyboard_event.hpp
vocab/meta/: configuration.hpp
vocab/runtime/: allocation_id.hpp  any.hpp  any_io.hpp  inline.h  machine_id.hpp  maths_types.hpp  maths_types_io.hpp  mp.hpp  mpo.hpp  owner_id.hpp  pointer.hpp  pointer_io.hpp  process_id.hpp  timestamp.hpp
vocab/service/: CMakeLists.txt  fiber_id.hpp  function_type_name.hpp  inline.h  interface_id.hpp  interface_type_name.hpp  keyboard_event.hpp  logical_thread_id.hpp  logical_thread_manager.hpp  machine_id.hpp  mp.hpp  mpft.hpp  mpo.hpp  mptf.hpp  mptfo.hpp  mptfs.hpp  node.cpp  object_id.hpp  owner_id.hpp  program.cpp  (+8 more)
vocab/service/tests/: CMakeLists.txt  mptf_test.cpp  mptfo_test.cpp  thread_id_test.cpp
(+27 files in other folders)
